--- a/InfinitRunnerSarah/MainPage.xaml
+++ b/InfinitRunnerSarah/MainPage.xaml
@@ -7,29 +7,58 @@
 
     <Grid>
         <HorizontalStackLayout x:Name="HsLayer1">
-            <Image Source="ceu2.jpg"/>
-            <Image Source="ceu2.jpg"/>
-            <Image Source="ceu2.jpg"/>
+            <Image Source="ceu2.jpg"
+                   VerticalOptions="Fill"
+                   Aspect="Fill"/>
+            <Image Source="ceu2.jpg"
+                   VerticalOptions="Fill"
+                   Aspect="Fill"/>
+            <Image Source="ceu2.jpg"
+                   VerticalOptions="Fill"
+                   Aspect="Fill"/>
         </HorizontalStackLayout>
 
         <HorizontalStackLayout x:Name="HsLayer2">
-            <Image Source="predio.png"/>
-            <Image Source="predio.png"/>
-            <Image Source="predio.png"/>
+            <Image Source="predio.png"
+                   VerticalOptions="Fill"
+                   Aspect="Fill"/>
+            <Image Source="predio.png"
+                   VerticalOptions="Fill"
+                   Aspect="Fill"/>
+            <Image Source="predio.png"
+                   VerticalOptions="Fill"
+                   Aspect="Fill"/>
         </HorizontalStackLayout>
 
         <HorizontalStackLayout x:Name="HsLayer3">
-            <Image Source="mato.png"/>
-            <Image Source="mato.png"/>
-            <Image Source="mato.png"/>
+            <Image Source="mato.png"
+                   VerticalOptions="Fill"
+                   Aspect="Fill"/>
+            <Image Source="mato.png"
+                   VerticalOptions="Fill"
+                   Aspect="Fill"/>
+            <Image Source="mato.png"
+                   VerticalOptions="Fill"
+                   Aspect="Fill"/>
         </HorizontalStackLayout>
 
         <HorizontalStackLayout x:Name="HsLayer4Chao"
-            HeightRequest="50"
-            VerticalOptions="End">
-            <Image Source="chao.png"/>
-            <Image Source="chao.png"/>
-            <Image Source="chao.png"/>
+                               VerticalOptions="End">
+            <Image Source="chao.png"
+                   HeightRequest="130"
+                   VerticalOptions="End"
+                   Aspect="AspectFill"
+                   HorizontalOptions="Fill"/>
+            <Image Source="chao.png"
+                   HeightRequest="130"
+                   VerticalOptions="End"
+                   Aspect="AspectFill"
+                   HorizontalOptions="Fill"/>
+            <Image Source="chao.png"
+                   HeightRequest="130"
+                   VerticalOptions="End"
+                   Aspect="AspectFill"
+                   HorizontalOptions="Fill"/>
         </HorizontalStackLayout>
     </Grid>
 </ContentPage>
