--- a/InfinitRunnerSarah/MainPage.xaml
+++ b/InfinitRunnerSarah/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="InfinitRunnerSarah.MainPage"
+             xmlns::ffimageloading="clr-namespace:FFImageLoading.Maui;assembly=FFImageLoading.Maui"
              Shell.NavBarIsVisible="false"
              BackgroundColor="White">
 
@@ -61,6 +62,12 @@
                             HorizontalOptions="Fill"/>
               </HorizontalStackLayout>
 
-              <Image x:Name="Personagem"/>
+              <ff:CachedImageView x:Name="Personagem"
+                                  CacheType="Disk"
+                                  CacheDuration="365"
+                                  HeightRequest="200"
+                                  WidthRequest="180"
+                                  VerticalOptions="End"
+                                  HorizontalOptions="Start"/>
        </Grid>
 </ContentPage>
