--- a/InfinitRunnerSarah/MainPage.xaml
+++ b/InfinitRunnerSarah/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="InfinitRunnerSarah.MainPage"
-             xmlns::ffimageloading="clr-namespace:FFImageLoading.Maui;assembly=FFImageLoading.Maui"
+             xmlns:ff="clr-namespace:FFImageLoading.Maui;assembly=FFImageLoading.Maui"
              Shell.NavBarIsVisible="false"
              BackgroundColor="White">
 
@@ -63,8 +63,9 @@
               </HorizontalStackLayout>
 
               <ff:CachedImageView x:Name="Personagem"
-                                  CacheType="Disk"
+                                  CacheType="All"
                                   CacheDuration="365"
+                                  Margin="30"
                                   HeightRequest="200"
                                   WidthRequest="180"
                                   VerticalOptions="End"
